# Radial-Wave-Typing-Shooter-for-Rust

./: Cargo.toml
content/: english_adventure_short.txt  english_horror_short.txt  english_noir_short.txt  english_romance_short.txt  english_scifi_short.txt  english_sliceoflife_short.txt  english_varied_paragraphs.txt  sample_1.txt
src/: background.rs  boss.rs  combat.rs  enemy.rs  game_over.rs  items.rs  main.rs  menu.rs  particles.rs  pause.rs  player.rs  resources.rs  ui.rs
