[package]
name = "Radial-Wave-Typing-Shooter"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_state",
    "bevy_gizmos",
    "default_font",
    "png",
    "x11",
] }
rand = "0.8"
